--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "ts-lint": "^4.5.1",
     "ts-node": "^8.10.2",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
     "nodemon": "^2.0.4"
   }
