--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "request": "^2.88.2",
     "ts-lint": "^4.5.1",
     "ts-node": "^8.10.2",
     "tsc": "^1.20150623.0",
@@ -26,6 +27,7 @@
     "@types/body-parser": "^1.19.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
+    "@types/request": "^2.48.5",
     "nodemon": "^2.0.4"
   }
 }
